# dq-watchdog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EVALS.md
docs/superpowers/plans/: 2026-05-18-dq-watchdog.md
docs/superpowers/specs/: 2026-05-18-dq-watchdog-design.md
evals/: conftest.py  test_evals.py
evals/fixtures/benchmark_v1/: build.py  labels.json  test.parquet  train.parquet
tests/: test_autoencoder.py  test_cli.py  test_drift.py  test_eval.py  test_features.py  test_generate.py  test_iforest.py  test_models_types.py  test_service.py  test_train.py
watchdog/: cli.py  drift.py  eval.py  features.py  generate.py  models_types.py  service.py  train.py
watchdog/models/: autoencoder.py  base.py  iforest.py
