[project]
name = "dq-watchdog"
version = "0.1.0"
description = "ML anomaly detector for data quality timeseries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5.0",
    "torch>=2.4.0",
    "mlflow>=2.17.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    "typer>=0.13.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
watchdog = "watchdog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watchdog"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch.*",
]
